# deadend-cli

./: .env.template  .gitignore  .gitmodules  README.md  config.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: deploy.yml  docker-build.yml  publish.yml
benchmarks/hackthebox/cyber-apocalypse-2024/web/[Easy] Labyrinth Linguist/: compose.yml  eval_metadata_file.json
benchmarks/hackthebox/cyber-apocalypse-2024/web/[Easy]_Labyrinth_Linguist/: compose.yml  eval_metadata_file.json
deadend_cli/: main.py
deadend_cli/cli/: __init__.py  banner.py  chat.py  cli.py  console.py  eval.py  init.py
deadend_cli/core/: core.py  exceptions.py  workflow_runner.py
deadend_cli/core/agents/: __init__.py  exploit_web_agent.py  factory.py  judge.py  planner.py  recon_shell_agent.py  reporter.py  router.py  webapp_recon_agent.py
deadend_cli/core/code_indexer/: code_splitter.py  language_patterns.py
deadend_cli/core/config/: __init__.py  settings.py
deadend_cli/core/context/: context_engine.py  memory.py
deadend_cli/core/embedders/: __init__.py  code_indexer.py  embedders.py  knowledge_base_indexer.py
deadend_cli/core/models/: __init__.py  registry.py
deadend_cli/core/rag/: database.py  db_cruds.py  models.py  schemas.py
deadend_cli/core/sandbox/: __init__.py  sandbox.py  sandbox_manager.py
deadend_cli/core/tools/: __init__.py  crawler.py  knowledge_base.py  playwright_requester.py  python_interpreter.py  requester.py  shell.py  source_code_browser.py  web_resource_extractor.py  webapp_code_rag.py  zap_connector.py
deadend_cli/core/utils/: __init__.py  llm.py  network.py  structures.py
deadend_cli/data/: vendor_specific_files.json
deadend_cli/data/memory/: reusable_credentials.json
deadend_cli/eval/: ctf_evaluator.py  eval.py
deadend_cli/prompts/: __init__.py  judge.instructions.jinja2  planner.instructions.jinja2  recon_shell.instructions.jinja2  reporter.instructions.jinja2  router.instructions.jinja2  template_renderer.py  webapp_recon.instructions.jinja2
deadend_cli/prompts/tools/: sandboxed_shell_tool.description.jinja2  send_payload.description.jinja2  webapp_code_rag.description.jinja2
docs/: architecture.md  features.md  index.md  usage.md
docs/.vitepress/: config.mts
docs/architecture/: agentic_architecture.md  authentication_handling.md  code_indexer.md  sandbox.md  web_extractor.md  webapp_testing.md
docs/evaluation/: benchmarks.md  metrics.md
gvisor_install/: daemon.json.new  install_gvisor.sh
setup/gvisor/: daemon.json  install_gvisor.sh
setup/images/: kalilinux.Dockerfile  webapp_sec.Dockerfile
setup/pgvector/: setup_pgvector.sh
src/: entrypoint.py  main.py
src/agents/: analyzer_agent.py  planner.py  requester_agent.py  shell_agent.py  testing_grounds.py
src/cli/: __init__.py  app.py  app.tcss  banner.py  chat.py  cli.py  console.py  eval.py  textual_prompt.py
src/cli/widgets/: chat.py  controller.py
src/code_indexer/: code_chunker.py  code_splitter.py
src/core/: __init__.py  core.py  exceptions.py  task_process.py  task_processor.py  workflow_runner.py
src/core/agents/: __init__.py  agent.py  analyzer_agent.py  exploit_agent.py  exploit_web_agent.py  factory.py  judge.py  payload_agent.py  planner.py  requester_agent.py  router.py  shell_agent.py  webapp_recon_agent.py
src/core/code_indexer/: code_chunker.py  code_splitter.py  language_patterns.py
src/core/config/: __init__.py  settings.py
src/core/context/: context_engine.py
src/core/embedders/: code_indexer.py  knowledge_base_indexer.py
src/core/models/: __init__.py  models.py  registry.py
src/core/rag/: __init__.py  code_indexer_db.py  db_cruds.py  models.py  schemas.py  webpage_insert.py
src/core/sandbox/: __init__.py  sandbox.py  sandbox_manager.py
src/core/tools/: __init__.py  code_indexer.py  crawler.py  knowledge_base.py  requester.py  shell.py  source_code_browser.py  web_resource_extractor.py  web_target_code_analyzer.py  webapp_code_rag.py  zap_connector.py
src/core/utils/: llm.py  network.py  structures.py
src/eval/: ctf_evaluator.py  eval.py
src/memory/: memory.py
src/prompts/: __init__.py  judge.instructions.jinja2  planner.instructions.jinja2  requester.instructions.jinja2  router.instructions.jinja2  shell.instructions.jinja2  template_renderer.py  webapp_recon.instructions.jinja2
src/prompts/tools/: is_valid_request.description.jinja2  requester.description.jinja2  shell.description.jinja2  webapp_code_rag.description.jinja2
src/rag/: code_indexer_db.py  database.py  webpage_insert.py
src/sandbox/: sandbox.py  sandbox_manager.py
src/tools/: code_indexer.py  crawler.py  requester.py  web_resource_extractor.py  zap_connector.py
tests/: conftest.py  test_sandbox.py
tests/fixtures/: index.html  main.js  sample_data.json  sandbox_fixtures.py
tests/integration/: test_chunker.py  test_sandbox_integration.py
tests/unit/: test_analyzer_agent.py  test_crawler.py  test_llm.py  test_requester.py  test_sandbox.py  test_sandbox_core.py  test_sandbox_manager.py  test_testing_grounds.py  test_webpage_rag.py
